# talisman-ai-challenge

./: .gitignore  README.md  manage.py  pyproject.toml  swagger.json
app/: __init__.py  api.py  config.py  controller.py  errors.py
app/utils/: file_check.py  processing.py
