[tool.poetry]
name = "talisman-ai"
version = "0.1.0"
description = ""
authors = ["guilherme-aguiar <gui9627oli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tika = "^2.6.0"
Flask = "^2.3.2"
openai = "^0.27.8"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.0"
Flask-RESTful = "^0.3.10"
Flask-Script = "2.0.5"
flask-swagger-ui = "^4.11.1"
python-magic = "^0.4.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
